--- a/inicio/inicio.html
+++ b/inicio/inicio.html
@@ -17,7 +17,7 @@
 	<div id="menu-lateral"></div>
 
 	<div id="contenido">
-		<div class="container mt-4">
+		<div class="container-fluid mt-4">
 
 			<div class="card">
 				<div class="card-header">Inicio</div>
